[package]
name = "genesis"
version = "0.1.0"
authors = ["Dan Schatzberg <schatzberg.dan@gmail.com>"]
repository = "https://github.com/dschatzberg/genesis"
homepage = "https://github.com/dschatzberg/genesis"
license = "AGPL-3.0"
readme = "README.md"
documentation = "https://dschatzberg.github.io/genesis"
description = "Genesis Microkernel"
keywords = ["operating system", "kernel", "nostd"]

[lib]
name = "genesis"
crate-type = ["staticlib"]

[dependencies]
clippy = "0.0.35"
fixedvec = "0.2"
multiboot = "0.2"
rlibc = "0.1"
spin = "0.3"

[dependencies.bitflags]
git = "https://github.com/phil-opp/bitflags.git"
branch = "no_std"

[dependencies.lazy_static]
version = "0.1"
features = ["nostd"]
git = "https://github.com/dschatzberg/lazy-static.rs"
branch = "spin"

[dependencies.x86]
git = "https://github.com/dschatzberg/rust-x86.git"
